# Browser-history-browser

./: .gitignore  DESIGN.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.copilot/: instructions.md
.github/workflows/: ci.yml
src/: index.html  main.js  settings.html  settings.js  style.css  theme-init.js  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  db.rs  domain.rs  main.rs
